2004-11-05  Don Allingham  <dallingham@users.sourceforge.net>
	* src/ImageSelect.py: Add date/place property to media objects
	* src/ReadXML.py: Add date/place property to media objects
	* src/RelLib.py: Add date/place property to media objects
	* src/WriteXML.py: Add date/place property to media objects
	* src/gramps.glade: Add date/place property to media objects
	* src/SelectObject.py: display gramps id instead of internal handle

	* src/gramps_main.py: fix setting of active person on history change

2004-11-05 Tim Waugh  <twaugh@redhat.com>
	* src/plugins/Ancestors.py: Include non-marriage relationships.

	* src/StartupDialog.py: Fixed typo (gtk.quit -> gtk.main_quit).

2004-11-02  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py (Gramps.redraw_histmenu): use GRAMPS
	id instead of internal ID for history menu

2004-10-31  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: fixed home person button

2004-10-30  Don Allingham  <dallingham@users.sourceforge.net>
	* src/WriteGedcom.py (GedcomWriter.write_person): handle
	empty event handles

2004-10-28  Don Allingham  <dallingham@users.sourceforge.net>
	* Makefile.am: added distuninstallcheck_listfiles
	* doc/Makefile.am: Added CLEANFILES
	* src/Date.py: Added "set_year" function
	* src/Utils.py: qualifiy Date calls, eliminate string
	module usage
	* src/edit_sm.png: new image
	* src/Makefile.am: install edit_sm.png
	* src/gramps_main.py: update relationship calculator
	on database change
	* src/Ancestors.py: initialize born_info

2004-10-28 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/DetDescendantReport.py: New Date usage.

2004-10-27  Tim Waugh  <twaugh@redhat.com>
	* src/plugins/Ancestors.py: Fixed typo spotted by Eero Tamminen.

2004-10-26  Don Allingham  <dallingham@users.sourceforge.net>
	* src/docgen/OpenOfficeDoc.py: fix asian font, file extension
	* src/plugins/DescendReport.py: fix get_valid_year
